--- a/numerical/potential/meson.build
+++ b/numerical/potential/meson.build
@@ -1,14 +1,17 @@
-# FIXME: debug Meson internals
-# mumps = dependency('MUMPS', cmake_module_path : 'cmake/Modules')
 mumps_root = get_option('MUMPS_ROOT')
-if mumps_root == ''
-  mumpsinc = '/usr/include'
-  mumpslib = fc.find_library('dmumps', required : false)
+if system_blas
+  # mumps = dependency('MUMPS', cmake_module_path : 'cmake/Modules')
+  if mumps_root == ''
+    mumpsinc = '/usr/include'
+    mumpslib = fc.find_library('dmumps', required : false)
+  else
+    message('searching for MUMPS in ' + mumps_root)
+    mumpsinc = mumps_root / 'include'
+    mumpslib = [fc.find_library('dmumps', required : false, dirs : mumps_root),
+                fc.find_library('mumps_common', required : false, dirs : mumps_root)]
+  endif
 else
-  message('searching for MUMPS in ' + mumps_root)
-  mumpsinc = mumps_root / 'include'
-  mumpslib = [fc.find_library('dmumps', required : false, dirs : mumps_root),
-              fc.find_library('mumps_common', required : false, dirs : mumps_root)]
+  mumpslib = disabler()
 endif
 if mumpslib.found()
   mumps = declare_dependency(include_directories: mumpsinc, dependencies: mumpslib)
@@ -18,17 +21,21 @@ else
 endif
 
 
-# dependency('scalapack') not yet working in Meson--cmake->meson bug within Meson, yielding long meson-log.txt
-# scalapack = dependency('scalapack', cmake_module_path : 'cmake/Modules')
 scalapack_root = get_option('SCALAPACK_ROOT')
-if scalapack_root == ''  # system
-  scalapack = fc.find_library('scalapack-openmpi', required: false)
-  if not scalapack.found()
-    scalapack = fc.find_library('scalapack', required: false)
+if system_blas
+  # dependency('scalapack') not yet working in Meson--cmake->meson bug within Meson, yielding long meson-log.txt
+  # scalapack = dependency('scalapack', cmake_module_path : 'cmake/Modules')
+  if scalapack_root == ''  # system
+    scalapack = fc.find_library('scalapack-openmpi', required: false)
+    if not scalapack.found()
+      scalapack = fc.find_library('scalapack', required: false)
+    endif
+  else
+    message('searching for SCALAPACK in ' + scalapack_root)
+    scalapack = fc.find_library('scalapack', dirs : scalapack_root / 'lib')
   endif
 else
-  message('searching for SCALAPACK in ' + scalapack_root)
-  scalapack = fc.find_library('scalapack', dirs : scalapack_root / 'lib')
+  scalapack = disabler()
 endif
 if not scalapack.found()
   scalapack_proj = subproject('scalapack')
