--- a/meson_options.txt
+++ b/meson_options.txt
@@ -7,3 +7,4 @@ option('LAPACK_ROOT', type : 'string', description : 'root directory of LAPACK')
 option('SCALAPACK_ROOT', type : 'string', description : 'root directory of SCALAPACK')
 option('MUMPS_ROOT', type : 'string', description : 'root directory of MUMPS')
 option('NP', type: 'string', description: 'manually set number of MPI processes')
+option('system_blas', type: 'boolean', value: false, description: 'use system libraries')
