Azure: require debug build to pass first. Meson/CMake: make bounds-check part of debug build

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -38,7 +38,7 @@ stages:
 
 - stage: UnitTests
   jobs:
-  - job: UnitGCC6
+  - job: DebugOptsGCC6
     pool:
       vmImage: ubuntu-latest
 
@@ -60,7 +60,7 @@ stages:
       displayName: 'setup Meson'
     - script: python -m pip install -e .[tests]
       displayName: 'Install Python dev'
-    - script: meson setup build -Dsystem_blas=true
+    - script: meson setup build -Dsystem_blas=true --buildtype debug
       env:
         CC: gcc-6
         FC: gfortran-6
