refactor CMake and Meson to build similarly
Making linked libraries correspond 1:1 with each module.
Make Cmake and Meson build in the same way, that is, making the same static libs

Put Meson compiler flag setup into cmake directory to declutter main meson.build

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,8 +22,8 @@ list(APPEND CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake/Modules/)
 
 include(${PROJECT_SOURCE_DIR}/cmake/compilers.cmake)
 include(${PROJECT_SOURCE_DIR}/cmake/libraries.cmake)
-include(${PROJECT_SOURCE_DIR}/cmake/mumps.cmake)
 include(${PROJECT_SOURCE_DIR}/cmake/utils.cmake)
+include(${PROJECT_SOURCE_DIR}/cmake/mumps.cmake)
 
 # --- pretests, to help catch missing libs
 add_subdirectory(tests)
@@ -42,14 +42,10 @@ target_link_libraries(io PRIVATE const mpimod grid calculus fsutils logging)
 target_compile_definitions(io PRIVATE TRACE=${TRACE})
 target_compile_options(io PRIVATE ${FFLAGS})
 
-add_library(temporal temporal/temporal.f90)
-target_link_libraries(temporal PRIVATE const mpimod grid MPI::MPI_Fortran)
-target_compile_options(temporal PRIVATE ${FFLAGS})
-
 add_subdirectory(temporal)
 
 add_library(neutral neutral/neutral.f90)
-target_link_libraries(neutral PUBLIC interp io msis timeutils MPI::MPI_Fortran)
+target_link_libraries(neutral PRIVATE const grid interp io mpimod msis timeutils MPI::MPI_Fortran)
 target_compile_options(neutral PRIVATE ${FFLAGS})
 
 add_library(collision collisions/collisions.f90)
@@ -57,52 +53,28 @@ target_link_libraries(collision PRIVATE const)
 target_compile_options(collision PRIVATE ${FFLAGS})
 
 add_library(sources sources/sources.f90)
-target_link_libraries(sources PRIVATE collision grid calculus)
+target_link_libraries(sources PRIVATE calculus collision const grid mpimod)
 target_compile_options(sources PRIVATE ${FFLAGS})
-
-# --- MUMPS stuff
-add_library(potential_mumps numerical/potential/potential_mumps.F90)
-target_link_libraries(potential_mumps PRIVATE const grid calculus interp
-  ${MUMPS_LIBRARIES} MPI::MPI_Fortran)
-target_compile_definitions(potential_mumps PRIVATE REALBITS=${realbits})
-target_include_directories(potential_mumps PRIVATE ${MUMPS_INCLUDE_DIRS})
-target_compile_options(potential_mumps PRIVATE ${FFLAGS})
-
-add_library(potential_comm_mumps numerical/potential/potential_comm_mumps.f90)
-target_link_libraries(potential_comm_mumps PRIVATE potential_mumps potentialBCs collision calculus grid const)
-target_compile_options(potential_comm_mumps PRIVATE ${FFLAGS})
-
-add_library(potentialBCs numerical/potential/boundary_conditions/potentialBCs_mumps.f90)
-target_link_libraries(potentialBCs PRIVATE temporal timeutils grid calculus interp io const
-    ${MUMPS_LIBRARIES} MPI::MPI_Fortran)
-target_include_directories(potentialBCs PRIVATE ${MUMPS_INCLUDE_DIRS})
-target_compile_options(potentialBCs PRIVATE ${FFLAGS})
 
 # --- other libs
 add_library(multifluid multifluid/multifluid.f90)
-target_link_libraries(multifluid PRIVATE precipBCs mpimod grid ionization sources collision advec diffusion)
+target_link_libraries(multifluid PRIVATE advec calculus collision const diffusion grid ionization mpimod precipBCs sources timeutils)
 target_compile_options(multifluid PRIVATE ${FFLAGS})
 
 # --- Main GEMINI executable
 add_executable(gemini_fang.bin gemini.f90)
-target_link_libraries(gemini_fang.bin PRIVATE mpimod io neutral precipBCs
-  temporal multifluid
-  potentialBCs potential_comm_mumps const
+target_link_libraries(gemini_fang.bin PRIVATE const grid io mpimod multifluid neutral potential precipBCs temporal timeutils
   ${LAPACK_LIBRARIES})  # necessary for self-compiled
-#  MPI::MPI_Fortran)
 target_compile_options(gemini_fang.bin PRIVATE ${FFLAGS})
 
 if(useglow)
   add_library(multifluid_glow multifluid/multifluid.f90)
-  target_link_libraries(multifluid_glow PRIVATE precipBCs mpimod grid ionization sources collision advec diffusion)
+  target_link_libraries(multifluid_glow PRIVATE advec calculus collision const diffusion grid ionization_glow mpimod precipBCs sources timeutils)
   target_compile_options(multifluid_glow PRIVATE ${FFLAGS})
 
   add_executable(gemini_glow.bin gemini.f90)
-  target_link_libraries(gemini_glow.bin PRIVATE mpimod io neutral precipBCs
-    temporal multifluid_glow
-    potentialBCs potential_comm_mumps const
+  target_link_libraries(gemini_glow.bin PRIVATE const grid io mpimod multifluid_glow neutral potential precipBCs temporal timeutils
     ${LAPACK_LIBRARIES})  # necessary for self-compiled
-  #  MPI::MPI_Fortran)
   target_compile_options(gemini_glow.bin PRIVATE ${FFLAGS})
 endif(useglow)
 
