--- a/ionization/meson.build
+++ b/ionization/meson.build
@@ -1,7 +1,5 @@
-ionization_src = files('ionization.f90', 'boundary_conditions/precipBCs_mod.f90')
-
-ionization = library('ionization', ionization_src, 'glow_dummy.f90',
-  link_with: [io, const, calculus, grid, neutral, timeutils, mpimod],
+ionization = library('ionization', 'ionization.f90', 'glow_dummy.f90',
+  link_with: [const, neutral, grid, timeutils, mpimod],
   dependencies : mpi)
 
 # ===== optional GLOW library
@@ -12,8 +10,12 @@ if use_glow
 
   data_dir = 'subprojects/glow/data/' # need trailing slash
 
-  ionization_glow = library('ionization_glow', ionization_src, 'glow_run.F90',
-    link_with: [glow_lib, io, const, calculus, grid, neutral, timeutils, mpimod],
+  ionization_glow = library('ionization_glow', 'ionization.f90', 'glow_run.F90',
+    link_with: [glow_lib, const, neutral, grid, timeutils, mpimod],
     dependencies : mpi,
     fortran_args: '-DDATADIR="'+data_dir+'"')
 endif
+
+precipBCs = library('precipBCs', 'boundary_conditions/precipBCs_mod.f90',
+  link_with: [mpimod, const, grid, interp, io, timeutils],
+  dependencies: mpi)
