--- a/temporal/CMakeLists.txt
+++ b/temporal/CMakeLists.txt
@@ -1,17 +1,7 @@
-cmake_minimum_required(VERSION 3.1)
-project(TimeUtilities LANGUAGES Fortran)
-enable_testing()
-
-get_directory_property(hasParent PARENT_DIRECTORY)
-if(NOT hasParent)
-  if(NOT realbits)
-    set(realbits 64)
-  endif()
-  include(${CMAKE_CURRENT_SOURCE_DIR}/../cmake/compilers.cmake)
-  add_library(const ${CMAKE_CURRENT_SOURCE_DIR}/../numerical/constants/phys_consts.F90)
-  target_compile_definitions(const PRIVATE REALBITS=${realbits})
-  set_target_properties(const PROPERTIES Fortran_MODULE_DIRECTORY ${CMAKE_BINARY_DIR})
-endif()
+add_library(temporal temporal.f90)
+target_link_libraries(temporal PRIVATE const mpimod grid MPI::MPI_Fortran)
+target_compile_options(temporal PRIVATE ${FFLAGS})
+set_target_properties(temporal PROPERTIES Fortran_MODULE_DIRECTORY ${CMAKE_BINARY_DIR})
 
 add_library(timeutils timeutils.f90)
 target_link_libraries(timeutils PRIVATE const)
