--- a/meson_options.txt
+++ b/meson_options.txt
@@ -2,9 +2,9 @@ option('HDF', type : 'boolean', value: false, description : 'use HDF5 for IO')
 option('useglow', type : 'boolean', value: false, description : 'use GLOW instead of Fang')
 option('realbits', type : 'string', value : '64', description : 'real bits')
 option('usematlab', type : 'boolean', value: false, description : 'Matlab >= R2019a required')
-option('MPI_ROOT', type : 'string', description : 'root directory of OpenMPI')
 option('LAPACK_ROOT', type : 'string', description : 'root directory of LAPACK')
 option('SCALAPACK_ROOT', type : 'string', description : 'root directory of SCALAPACK')
 option('MUMPS_ROOT', type : 'string', description : 'root directory of MUMPS')
+option('MPI_ROOT', type : 'string', description : 'root directory of MPI')
 option('NP', type: 'string', description: 'manually set number of MPI processes')
 option('system_blas', type: 'boolean', value: false, description: 'use system libraries')
