--- a/io/meson.build
+++ b/io/meson.build
@@ -1,4 +1,4 @@
-io_src = files('io.f90', 'aurora.f90', 'mag.f90', 'plasma.f90')
+io_src = files('io.f90', 'aurora.f90', 'mag.f90', 'plasma.f90', 'output.f90')
 
 fsutils = library('fsutils', 'mkdir.F90', 'expanduser.f90', 'formats.f90')
 
