meson:octave add diffusion 1D tests

--- a/numerical/CMakeLists.txt
+++ b/numerical/CMakeLists.txt
@@ -21,18 +21,7 @@ target_link_libraries(calculus PRIVATE grid)
 target_compile_options(calculus PRIVATE ${FFLAGS})
 set_target_properties(calculus PROPERTIES Fortran_MODULE_DIRECTORY ${CMAKE_BINARY_DIR})
 
-# ----- diffusion
-add_library(diffusion diffusion/diffusion.F90)
-target_link_libraries(diffusion PRIVATE const grid ${LAPACK_LIBRARIES})
-target_compile_options(diffusion PRIVATE ${FFLAGS})
-target_include_directories(diffusion PRIVATE ${LAPACK_INCLUDE_DIRS})
-if(NOT LAPACK_LAPACK95_FOUND)
-  target_sources(diffusion PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../vendor/lapack95/gbsv.F90)
-  target_compile_definitions(diffusion PRIVATE REALBITS=${realbits})
-endif()
-set_target_properties(diffusion PROPERTIES Fortran_MODULE_DIRECTORY ${CMAKE_BINARY_DIR})
-
-include(test_diffusion.cmake)
+add_subdirectory(diffusion)
 
 # -- more libs
 
